Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   css/style.css
	new file:   img/aftern.jpg
	new file:   img/akke.jpg
	modified:   img/alt.jpg
	new file:   img/anim.jpg
	new file:   img/basa.jpg
	new file:   img/bus.jpg
	modified:   img/caravan.jpg
	modified:   img/cas.jpg
	new file:   img/chu.jpg
	modified:   img/coffee.jpg
	modified:   img/consol.jpg
	modified:   img/crowd.jpg
	new file:   img/deli.jpg
	modified:   img/dvet.jpg
	modified:   img/emilr.jpg
	modified:   img/eptic.jpg
	modified:   img/freeUr.jpg
	modified:   img/gramma.jpg
	modified:   img/greatVa.jpg
	new file:   img/gym.jpg
	new file:   img/gypo.jpg
	new file:   img/hasta.jpg
	new file:   img/hiho.jpg
	modified:   img/ido.jpg
	new file:   img/joint.jpg
	new file:   img/krub.jpg
	new file:   img/later.jpg
	new file:   img/madde.jpg
	new file:   img/manu.jpg
	new file:   img/mdr.jpg
	modified:   img/microp.jpg
	modified:   img/modernman.jpg
	new file:   img/nanaba.jpg
	new file:   img/nb.jpg
	new file:   img/rave.jpg
	new file:   img/rtdm.jpg
	modified:   img/sadkid-blue.jpg
	new file:   img/sele.jpg
	modified:   img/subm.jpg
	modified:   img/talk.jpg
	modified:   img/tame.jpg
	modified:   img/techno.jpg
	modified:   img/toh.jpg
	new file:   img/vinly.jpg
	new file:   img/walki.jpg
	modified:   img/whiteelephant.jpg
	new file:   img/work.jpg
	modified:   index.html
	modified:   js/timeLine.js
	modified:   sources.html
	new file:   timeLine.html

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,10 @@ main{
 p,input,b,i,span,.text{
 	font-family: Asap;
 }
-
+a{
+	color:black;
+	text-decoration:none;
+}
 /*headers*/
 @font-face {
   font-family: AsapHeader;
@@ -99,7 +102,7 @@ h1,p,blockquote,figure,aside, .content-img{
 	margin-bottom:2rem;
 }
 
-p,blockquote{
+p,blockquote,h1{
 	text-align:justify;
 }
 
@@ -109,16 +112,9 @@ h1,figure{
 
 h1{
 	border-left: 0.15rem solid rgba(255, 255, 255, 0.3);
-	padding-bottom:2rem;
 }
 
-blockquote{
-	margin-left:5vw;
-	padding-left:2vw;
-	min-height:5rem;
-	display: flex;
-	align-items: center;
-}
+
 
 figure{
 	text-align:center;
@@ -143,6 +139,8 @@ figcaption{
 h1,p,blockquote,aside{
 	padding-right:10vw;
 }
+
+
 /*album-covers-mobile*/
 
 figure{
@@ -158,6 +156,10 @@ figcaption{
 	width:41vw;
 }
 
+#header-title{
+	border-bottom:3px solid rgba(255,255,255,0.3);
+	letter-spacing:10px;
+}
 /*timeline*/
 #timeLine{
 }
@@ -213,6 +215,17 @@ figcaption{
 .tl-vertical-line{
 	right:5vw;
 }
+
+.content-img{
+	position:relative;
+}
+.content-img h1{
+	position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255,255,255,0.5);
+}
+
 /*------------breakpoints*/
 
 /*phone only*/
@@ -276,6 +289,10 @@ figcaption{
 	}
 	h1,p,blockquote,aside, .content-img{
 		padding-right:20vw;
+	}
+	p,blockquote{
+		padding-left:3vw;
+		padding-right:32vw;
 	}
 	/*album-covers-desktop*/
 	figure{
