--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ section{
 }
 
 h1,p,blockquote,figure,aside, .content-img{
-	padding-left:3vw;
+	padding-left:5vw;
 	margin-bottom:2rem;
 }
 
@@ -140,7 +140,9 @@ h1,p,blockquote,aside{
 	padding-right:10vw;
 }
 
-
+#wallpaper{
+	display:none;
+}
 /*album-covers-mobile*/
 
 figure{
@@ -291,7 +293,7 @@ figcaption{
 		padding-right:20vw;
 	}
 	p,blockquote{
-		padding-left:3vw;
+		padding-left:5vw;
 		padding-right:32vw;
 	}
 	/*album-covers-desktop*/
@@ -310,6 +312,21 @@ figcaption{
 		width:54vw;
 		height:70vh;
 		margin-right:20vw;
+	}
+	main{
+		position:relative;
+		
+	}
+	#wallpaper{
+		height: 8000px;
+		position: absolute;
+		right: 9vw;
+		top: 78px;
+		width: 21vw;
+		display: block;
+		z-index:-1;
+		background-color: rgba(255,255,255,0);
+		background-image: url("data:image/svg+xml,%3Csvg width='84' height='48' viewBox='0 0 84 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='%23ffffff' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 	}
 }
 
