--- a/css/style.css
+++ b/css/style.css
@@ -309,16 +309,33 @@ figcaption{
 		width:15vw;
 	}	
 	.content-img{
-		width:54vw;
+		width:41vw;
 		height:70vh;
 		margin-right:20vw;
+	}
+	.content-img h1{
+		z-index:3;
+	}
+	.content-img::after{
+		content:" ";
+		width:100%;
+		height:100%;
+		position:absolute;
+		left:0;
+		top:0;
+		background-image: linear-gradient(to right, 
+			rgba(255,255,255,0) 0%,
+			rgba(255,255,255,0.3) 70%,
+			rgba(255,255,255,0.5) 85%,
+			rgba(255,255,255,0.9) 100%
+		);
 	}
 	main{
 		position:relative;
 		
 	}
 	#wallpaper{
-		height: 8000px;
+		height: 10000px;
 		position: absolute;
 		right: 9vw;
 		top: 78px;
@@ -326,8 +343,12 @@ figcaption{
 		display: block;
 		z-index:-1;
 		background-color: rgba(255,255,255,0);
-		background-image: url("data:image/svg+xml,%3Csvg width='84' height='48' viewBox='0 0 84 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='%23ffffff' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
+		background-image: url("data:image/svg+xml,%3Csvg width='84' height='48' viewBox='0 0 84 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='%23ffffff' fill-opacity='0.6' fill-rule='evenodd'/%3E%3C/svg%3E");
 	}
+	aside{
+		padding-right:26vw;
+	}
+	
 }
 
 /*for-big-desktop-up*/
